mas: use helpers for config data, drop chart version from pod labels

--- a/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
@@ -15,6 +15,13 @@ metadata:
 {{- end }}
   labels:
     {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 4 }}
+    k8s.element.io/confighash: {{ include "element-io.matrix-authentication-service.configmap-data" (dict "root" $ "context" .) | sha1sum }}
+    k8s.element.io/secrethash: {{ include "element-io.matrix-authentication-service.secret-data" (dict "root" $ "context" .) | sha1sum }}
+    {{ include "element-io.ess-library.postgres-label" (dict "root" $ "context" (dict
+                                                            "essPassword" "matrixAuthenticationService"
+                                                            "postgresProperty" .postgres
+                                                            )
+                                        ) }}
   name: {{ $.Release.Name }}-matrix-authentication-service
   namespace: {{ $.Release.Namespace }}
 spec:
@@ -30,13 +37,14 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 8 }}
-        k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/matrix-authentication-service/secret.yaml") $ | sha1sum }}"
+        {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" (dict "image" .image "labels" .labels "withChartVersion" false)) | nindent 8 }}
+        k8s.element.io/confighash: "{{ include "element-io.matrix-authentication-service.configmap-data" (dict "root" $ "context" .) | sha1sum }}"
+        k8s.element.io/secrethash: "{{ include "element-io.matrix-authentication-service.secret-data" (dict "root" $ "context" .) | sha1sum }}"
         {{ include "element-io.ess-library.postgres-label" (dict "root" $ "context" (dict
                                                                 "essPassword" "matrixAuthenticationService"
                                                                 "postgresProperty" .postgres
                                                                 )
-                                            ) -}}
+                                            ) }}
 {{- with .annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
