--- a/charts/matrix-stack/templates/matrix-authentication-service/configmap.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/configmap.yaml
@@ -14,7 +14,6 @@ metadata:
   labels:
     {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 4 }}
 data:
-  config.yaml: |
-    {{- include "element-io.matrix-authentication-service.config" (dict "root" $ "context" .) | nindent 4 }}
+  {{- include "element-io.matrix-authentication-service.configmap-data" (dict "root" $ "context" .) | nindent 2 -}}
 {{ end -}}
 {{- end -}}
