--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -15,54 +15,6 @@ metadata:
     {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
-{{- with (include "element-io.matrix-authentication-service.synapse-secret-data" (dict "root" $ "context" .)) }}
-{{- . | nindent 2 }}
-{{- end }}
-{{- with .additional }}
-{{- range $key := (. | keys | uniq | sortAlpha) }}
-{{- $prop := index $.Values.matrixAuthenticationService.additional $key }}
-{{- if $prop.config }}
-  user-{{ $key }}: {{ $prop.config | b64enc }}
-{{- end }}
-{{- end }}
-{{- end }}
-{{- with .postgres.password }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.postgres.password" "initIfAbsent" false)) }}
-{{- with .value }}
-  POSTGRES_PASSWORD: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "initIfAbsent" true)) }}
-{{- with .encryptionSecret }}
-{{- with .value }}
-  ENCRYPTION_SECRET: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- with required "privateKeys is required for Matrix Authentication Service" .privateKeys }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.rsa" "initIfAbsent" true)) }}
-{{- with .rsa }}
-{{- with .value }}
-  RSA_PRIVATE_KEY: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaPrime256v1" "initIfAbsent" true)) }}
-{{- with .ecdsaPrime256v1 }}
-{{- with .value }}
-  ECDSA_PRIME256V1_PRIVATE_KEY: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- with .ecdsaSecp256k1 }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp256k1" "initIfAbsent" false)) }}
-{{- with .value }}
-  ECDSA_SECP256K1_PRIVATE_KEY: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- with .ecdsaSecp384r1 }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp384r1" "initIfAbsent" false)) }}
-{{- with .value }}
-  ECDSA_SECP384R1_PRIVATE_KEY: {{ . | b64enc}}
-{{- end }}
-{{- end }}
-{{- end -}}
+{{- include "element-io.matrix-authentication-service.secret-data" (dict "root" $ "context" .) | nindent 2 }}
 {{- end -}}
 {{- end -}}
