--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_secret.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_secret.yaml
@@ -15,24 +15,6 @@ metadata:
     {{- include "element-io.matrix-rtc-authorizer.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
-{{- if not .keysYaml }}
-  {{- if $.Values.matrixRTC.sfu.enabled -}}
-    {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixRTC.livekitAuth.secret" "initIfAbsent" true)) }}
-  {{- end }}
-{{- else }}
-  {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixRTC.livekitAuth.keysYaml" "initIfAbsent" false)) }}
-{{- end }}
-{{- with .livekitAuth -}}
-  {{- with .keysYaml }}
-    {{- with .value }}
-  LIVEKIT_KEYS_YAML: {{ . | b64enc }}
-    {{- end -}}
-  {{- end -}}
-  {{- with .secret }}
-    {{- with .value }}
-  LIVEKIT_SECRET: {{ . | b64enc }}
-    {{- end -}}
-  {{- end -}}
-{{- end -}}
+  {{- include "element-io.matrix-rtc-authorizer.secret-data" (dict "root" $ "context" .) | nindent 2 -}}
 {{- end -}}
 {{- end -}}
