--- a/charts/matrix-stack/templates/matrix-rtc/sfu_deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_deployment.yaml
@@ -17,6 +17,7 @@ metadata:
 {{- end }}
   labels:
     {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+    k8s.element.io/confighash: {{ include "element-io.matrix-rtc-sfu.configmap-data" (dict "root" $ "context" .) | sha1sum }}
   name: {{ $.Release.Name }}-matrix-rtc-sfu
   namespace: {{ $.Release.Namespace }}
 spec:
@@ -32,7 +33,8 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" .) | nindent 8 }}
+        {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" (dict "image" .image "labels" .labels "withChartVersion" false)) | nindent 8 }}
+        k8s.element.io/confighash: {{ include "element-io.matrix-rtc-sfu.configmap-data" (dict "root" $ "context" .) | sha1sum }}
 {{- with .annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
