--- a/charts/matrix-stack/templates/synapse/redis_deployment.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_deployment.yaml
@@ -16,8 +16,8 @@ metadata:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
-    {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" .) | nindent 4 }}
-    k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/synapse/redis_configmap.yaml") $ | sha1sum }}"
+    {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" (dict "image" .image "labels" .labels)) | nindent 4 }}
+    k8s.element.io/confighash: "{{ include "element-io.synapse-redis.configmap-data" (dict "root" $) | sha1sum }}"
   name: {{ $.Release.Name }}-synapse-redis
   namespace: {{ $.Release.Namespace }}
 spec:
@@ -33,8 +33,8 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" .) | nindent 8 }}
-        k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/synapse/redis_configmap.yaml") $ | sha1sum }}"
+        {{- include "element-io.synapse-redis.labels" (dict "root" $ "context" (dict "image" .image "labels" .labels "withChartVersion" false)) | nindent 8 }}
+        k8s.element.io/confighash: "{{ include "element-io.synapse-redis.configmap-data" (dict "root" $) | sha1sum }}"
 {{- with .annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
