haproxy: use helpers for configmap data and drop chat version from pod labels

--- a/charts/matrix-stack/templates/haproxy/deployment.yaml
+++ b/charts/matrix-stack/templates/haproxy/deployment.yaml
@@ -16,12 +16,12 @@ metadata:
 {{- end }}
   labels:
     {{- include "element-io.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
-    k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/haproxy/configmap.yaml") $ | sha1sum }}"
+    k8s.element.io/confighash: "{{ include "element-io.haproxy.configmap-data" (dict "root" $ "context" .) | sha1sum }}"
 {{- if $.Values.synapse.enabled }}
-    k8s.element.io/synapsehash: "{{ include (print $.Template.BasePath "/synapse/synapse_haproxy_configmap.yaml") $ | sha1sum }}"
+    k8s.element.io/synapsehash: "{{ include "element-io.synapse-haproxy.configmap-data" (dict "root" $) | sha1sum }}"
 {{- end }}
 {{- if $.Values.wellKnownDelegation.enabled }}
-    k8s.element.io/wellknowndelegationhash: "{{ include (print $.Template.BasePath "/well-known/configmap.yaml") $ | sha1sum }}"
+    k8s.element.io/wellknowndelegationhash: {{ include "element-io.well-known-delegation.configmap-data" (dict "root" $ "context" $.Values.wellKnownDelegation) | sha1sum }}
 {{- end }}
   name: {{ $.Release.Name }}-haproxy
   namespace: {{ $.Release.Namespace }}
@@ -38,13 +38,13 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.haproxy.labels" (dict "root" $ "context" .) | nindent 8 }}
-        k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/haproxy/configmap.yaml") $ | sha1sum }}"
+        {{- include "element-io.haproxy.labels" (dict "root" $ "context" (dict "image" .image "labels" .labels "withChartVersion" false)) | nindent 8 }}
+        k8s.element.io/confighash: {{ include "element-io.haproxy.configmap-data" (dict "root" $ "context" .) | sha1sum }}
 {{- if $.Values.synapse.enabled }}
-        k8s.element.io/synapsehash: "{{ include (print $.Template.BasePath "/synapse/synapse_haproxy_configmap.yaml") $ | sha1sum }}"
+        k8s.element.io/synapsehash: {{ include "element-io.synapse-haproxy.configmap-data" (dict "root" $) | sha1sum }}
 {{- end }}
 {{- if $.Values.wellKnownDelegation.enabled }}
-        k8s.element.io/wellknowndelegationhash: "{{ include (print $.Template.BasePath "/well-known/configmap.yaml") $ | sha1sum }}"
+        k8s.element.io/wellknowndelegationhash: {{ include "element-io.well-known-delegation.configmap-data" (dict "root" $ "context" $.Values.wellKnownDelegation) | sha1sum }}
 {{- end }}
 {{- with .annotations }}
       annotations:
