--- a/charts/matrix-stack/templates/haproxy/configmap.yaml
+++ b/charts/matrix-stack/templates/haproxy/configmap.yaml
@@ -14,17 +14,6 @@ metadata:
   name: {{ $.Release.Name }}-haproxy
   namespace: {{ $.Release.Namespace }}
 data:
-  haproxy.cfg: |
-    {{- tpl ($.Files.Get "configs/haproxy/haproxy.cfg.tpl") (dict "root" $ "context" .) | nindent 4 }}
-  429.http: |
-    HTTP/1.0 429 Too Many Requests
-    Cache-Control: no-cache
-    Connection: close
-    Content-Type: application/json
-    access-control-allow-origin: *
-    access-control-allow-methods: GET, POST, PUT, DELETE, OPTIONS
-    access-control-allow-headers: Origin, X-Requested-With, Content-Type, Accept, Authorization
-
-    {"errcode":"M_UNKNOWN","error":"Server is unavailable"}
+  {{- include "element-io.haproxy.configmap-data" (dict "root" $ "context" .) | nindent 2 -}}
 {{- end -}}
 {{- end -}}
