haproxy: move 429.http to dedicated file

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -29,3 +29,9 @@ SPDX-License-Identifier = "AGPL-3.0-only"
 path = "docs/assets/images/*.png"
 SPDX-FileCopyrightText = "Copyright 2025 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only"
+
+
+[[annotations]]
+path = "charts/matrix-stack/configs/haproxy/429.http"
+SPDX-FileCopyrightText = "Copyright 2025 New Vector Ltd"
+SPDX-License-Identifier = "AGPL-3.0-only"
