Fix grep in build-test.yml

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -36,7 +36,7 @@ jobs:
         git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
         # Ensure all JSON files are consistently formatted
-        for file in $(git ls-files | grep json); do yq -iP --indent 2 -o json '.' "$file"; done
+        for file in $(git ls-files | grep -E "json$"); do yq -iP --indent 2 -o json '.' "$file"; done
 
         # Rebuild the charts & test values files with from the current source
         scripts/assemble_ci_values_files_from_fragments.sh
