--- a/charts/matrix-stack/ci/matrix-authentication-service-synapse-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-synapse-secrets-externally-values.yaml
@@ -37,6 +37,9 @@ matrixAuthenticationService:
   synapseOIDCClientSecret:
     secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseOIDC
+  synapseOIDCClientId:
+    secret: '{{ $.Release.Name }}-mas-external'
+    secretKey: synapseOIDC
   synapseSharedSecret:
     secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseShared
