--- a/charts/matrix-stack/ci/fragments/matrix-authentication-service-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-authentication-service-secrets-externally.yaml
@@ -12,6 +12,10 @@ matrixAuthenticationService:
     secret: "{{ $.Release.Name }}-mas-external"
     secretKey: synapseOIDC
 
+  synapseOIDCClientId:
+    secret: '{{ $.Release.Name }}-mas-external'
+    secretKey: synapseOIDC
+
   encryptionSecret:
     secret: "{{ $.Release.Name }}-mas-external"
     secretKey: encryption
