--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
@@ -31,6 +31,9 @@ matrixAuthenticationService:
   synapseOIDCClientSecret:
     secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseOIDC
+  synapseOIDCClientId:
+    secret: '{{ $.Release.Name }}-mas-external'
+    secretKey: synapseOIDC
   synapseSharedSecret:
     secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseShared
